--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,7 @@
+html,body{
+    overflow-x:hidden;
+}
+
 /* Animation */
 @keyframes fade-in {
     0% {
@@ -89,14 +93,14 @@ header .navbar {
 }
 
 #hero .subtitle {
-    font-size: clamp(5px, 8vw, 18px);
+    font-size: clamp(5px, 6vw, 18px);
     font-weight: 200;
     opacity: 1;
 }
 
 #hero h2 {
     font-family: "Space Mono" !important;
-    font-size: 120px;
+    font-size: clamp(5px, 24vw, 120px);
     font-weight: 700;
     margin-bottom: 1rem;
     color: var(--primary-color) !important;
